[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[project]
name = "chaingpt"
version = "0.0.1"
dependencies = [
    "sh >= 2.0.6",
    "whoosh >= 2.7.4",
    "colorama >= 0.4.6",
    "emoji >= 2.10.1", 
    "flask-restful >= 0.3.10",
    "langchain >= 0.0.353",
    "openai >= 1.6.1",
    "docker >= 7.0.0"
]